Step 5. Brain Even

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
       "ext-readline": "*"
     },
     "bin": [
-        "bin/brain-games"
+        "bin/brain-games",
+        "bin/brain-even"
     ],
     "require-dev": {
         "squizlabs/php_codesniffer": "4.x-dev"
