--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,11 @@
         "files": [
             "src/Cli.php",
             "src/Engine.php",
-            "src/Games/BrainEven/logic.php",
-            "src/Games/BrainCalc/logic.php",
-            "src/Games/BrainGcd/logic.php",
-            "src/Games/BrainProgression/logic.php",
-            "src/Games/BrainPrime/logic.php"
+            "src/Games/BrainEven.php",
+            "src/Games/BrainCalc.php",
+            "src/Games/BrainGcd.php",
+            "src/Games/BrainProgression.php",
+            "src/Games/BrainPrime.php"
         ]
     },
     "minimum-stability": "dev",
